weather_app_deployment_from_docker_private_repo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-deployment
  labels:
    app: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      imagePullSecrets:
      - name: my-registry-secret
      containers:
      - name: weather-app
        image: uzair102/u_repo:weather_app-v1.8
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  type: NodePort
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000
